--- a/src/app/subscribe/subscribe.component.html
+++ b/src/app/subscribe/subscribe.component.html
@@ -1,1 +1,38 @@
-<p>subscribe works!</p>
+<form class="comic-form" [formGroup]="comicForm">
+  <div class="selectors">
+    <mat-form-field>
+      <mat-label>Quicklist</mat-label>
+      <mat-select (selectionChange)="selectQuickList()" formControlName="quicklist">
+        <mat-option
+          *ngFor="let option of quickListOptions$ | async"
+          [value]="option"
+        >
+          {{ option.value }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Users</mat-label>
+      <mat-select (selectionChange)="selectUser()" formControlName="user">
+        <mat-option *ngFor="let user of users$ | async" [value]="user">
+          {{ user.userName | titlecase }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Comics</mat-label>
+      <mat-select (selectionChange)="selectComic()" formControlName="comic">
+        <mat-option *ngFor="let comic of comics$ | async" [value]="comic">
+          {{ comic.book }} #{{ comic.issueNumber }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="buttons">
+    <button mat-raised-button color="primary" (click)="submit()">Submit</button>
+    <button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
+  </div>
+</form>
+<h2 class="price">{{ price | currency }}</h2>
